chore(package/manifest): brings changes to the package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "url": "https://craftworks.at"
   },
   "keywords": [
-    "angular"
+    "angular",
+    "circular-slider",
+    "slider",
+    "iOS bedtime",
+    "timerange"
   ],
   "license": "MIT",
   "bugs": {
