--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,20 @@
 {
   "name": "ngx-circular-slider",
-  "version": "0.3.0",
+  "version": "0.3.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/zualexander/ngx-circular-slider.git"
   },
   "author": {
-    "name": "Alexander Zulechner"
+    "name": "Alexander Zulechner",
+    "url": "https://craftworks.at"
   },
   "keywords": [
-    "angular"
+    "angular",
+    "circular-slider",
+    "slider",
+    "iOS bedtime",
+    "timerange"
   ],
   "license": "MIT",
   "bugs": {
@@ -20,10 +25,14 @@
   "main": "ngx-circular-slider.umd.js",
   "peerDependencies": {
     "@angular/core": "^4.0.0",
+    "@angular/common": "^4.0.0",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "d3-interpolate": "1.1.5"
   },
   "dependencies": {
+    "@angular/core": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "rxjs": "^5.1.0",
     "d3-interpolate": "1.1.5"
   }
 }
