chore(gulp): brings automatic version update at build from package.json after `npm version TYPE`

--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "codelyzer": "~2.0.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-change": "^1.0.0",
+    "gulp-json-format": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rollup": "^2.11.0",
@@ -64,9 +66,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "rollup": "^0.41.6",
     "run-sequence": "^1.2.2",
