--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,23 +24,24 @@
     "typings": "ngx-circular-slider.d.ts",
     "main": "ngx-circular-slider.umd.js",
     "peerDependencies": {
-        "@angular/core": "^4.0.0",
-        "@angular/common": "^4.0.0",
-        "rxjs": "^5.1.0",
+        "@angular/common": "^5.2.0",
+        "@angular/core": "^5.2.0",
+        "rxjs": "^5.5.6",
         "d3-interpolate": "1.1.5"
     },
     "dependencies": {
-        "@angular/common": "^4.0.0",
-        "@angular/compiler": "^4.0.0",
-        "@angular/core": "^4.0.0",
-        "@angular/forms": "^4.0.0",
-        "@angular/http": "^4.0.0",
-        "@angular/platform-browser": "^4.0.0",
-        "@angular/platform-browser-dynamic": "^4.0.0",
-        "@angular/router": "^4.0.0",
+        "@angular/animations": "^5.2.0",
+        "@angular/common": "^5.2.0",
+        "@angular/compiler": "^5.2.0",
+        "@angular/core": "^5.2.0",
+        "@angular/forms": "^5.2.0",
+        "@angular/http": "^5.2.0",
+        "@angular/platform-browser": "^5.2.0",
+        "@angular/platform-browser-dynamic": "^5.2.0",
+        "@angular/router": "^5.2.0",
         "core-js": "^2.4.1",
-        "d3-interpolate": "^1.1.5",
-        "rxjs": "^5.1.0",
-        "zone.js": "^0.8.4"
+        "rxjs": "^5.5.6",
+        "zone.js": "^0.8.19",
+        "d3-interpolate": "^1.1.5"
     }
 }
