--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "build": "ng build --prod",
     "test": "ng test",
     "coverage": "ng test --sr -cc",
+    "format": "prettier {src/e2e}/**/* --write",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish": "gulp build",
-    "docs": "gulp docs"
+    "docs": "gulp docs",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@angular/animations": "^5.2.0",
@@ -44,9 +46,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "d3-interpolate": "^1.1.5",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "d3-interpolate": "^1.1.5"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
@@ -56,17 +58,6 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-change": "^1.0.0",
@@ -75,9 +66,24 @@
     "gulp-replace": "^0.5.4",
     "gulp-rollup": "^2.11.0",
     "gulp-typedoc": "^2.0.2",
+    "husky": "^0.14.3",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "lint-staged": "^7.0.4",
+    "prettier": "^1.12.0",
+    "protractor": "~5.1.2",
     "rollup": "^0.41.6",
     "run-sequence": "^1.2.2",
-    "typedoc": "^0.7.0"
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "tslint-config-prettier": "^1.10.0",
+    "typedoc": "^0.7.0",
+    "typescript": "~2.5.3"
   }
 }
