--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng test",
+    "test": "jest --watch",
+    "test:ci": "jest --runInBand",
+    "test:coverage": "jest --coverage",
     "coverage": "ng test --sr -cc",
     "format": "prettier {src/e2e}/**/* --write",
     "lint": "ng lint",
@@ -69,15 +71,10 @@
     "husky": "^0.14.3",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jest": "^22.4.3",
+    "jest-preset-angular": "^5.2.1",
     "lint-staged": "^7.0.4",
     "prettier": "^1.12.0",
-    "protractor": "~5.1.2",
     "rollup": "^0.41.6",
     "run-sequence": "^1.2.2",
     "ts-node": "~4.1.0",
