--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-circular-slider",
-    "version": "0.6.1",
+    "version": "0.6.2",
     "repository": {
         "type": "git",
         "url": "https://github.com/zualexander/ngx-circular-slider.git"
@@ -40,8 +40,8 @@
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
         "core-js": "^2.4.1",
+        "d3-interpolate": "^1.1.5",
         "rxjs": "^5.5.6",
-        "zone.js": "^0.8.19",
-        "d3-interpolate": "^1.1.5"
+        "zone.js": "^0.8.19"
     }
 }
