--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-circular-slider",
-    "version": "0.6.2",
+    "version": "0.6.3",
     "repository": {
         "type": "git",
         "url": "https://github.com/zualexander/ngx-circular-slider.git"
@@ -30,18 +30,18 @@
         "d3-interpolate": "1.1.5"
     },
     "dependencies": {
-        "@angular/animations": "^5.2.0",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@angular/router": "^5.2.0",
+        "@angular/animations": "5.2.10",
+        "@angular/common": "5.2.10",
+        "@angular/compiler": "5.2.10",
+        "@angular/core": "5.2.10",
+        "@angular/forms": "5.2.10",
+        "@angular/http": "5.2.10",
+        "@angular/platform-browser": "5.2.10",
+        "@angular/platform-browser-dynamic": "5.2.10",
+        "@angular/router": "5.2.10",
         "core-js": "^2.4.1",
         "d3-interpolate": "^1.1.5",
-        "rxjs": "^5.5.6",
-        "zone.js": "^0.8.19"
+        "rxjs": "^5.5.10",
+        "zone.js": "^0.8.26"
     }
 }
