replacement of gulp and so on for the new angular-cli lib format which belongs to the guidelines and brings version upgrade to angular 6

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "baseUrl": "",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
