--- a/projects/ngx-circular-slider/tsconfig.spec.json
+++ b/projects/ngx-circular-slider/tsconfig.spec.json
@@ -1,12 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "outDir": "../out-tsc/spec",
-    "baseUrl": "./",
-    "module": "commonjs",
+    "outDir": "../../out-tsc/spec",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "files": ["src/test.ts"],
+  "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
