--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
+    "moment": "^2.22.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
