--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:ci": "jest --runInBand",
     "test:coverage": "jest --coverage",
     "format:fix": "pretty-quick --staged",
-    "precommit": "run-s lint format:fix"
+    "precommit": "run-s lint format:fix",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@angular/animations": "^6.0.3",
@@ -42,6 +43,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@briebug/jest": "^1.3.0",
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
     "moment": "^2.22.2",
