--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -7,6 +7,6 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts"],
+  "include": ["../**/*.spec.ts", "../**/*.d.ts"],
   "exclude": ["node_modules"]
 }
