chore(package.json): brings types for d3 and moment as peer dependencies to lib

--- a/projects/ngx-circular-slider/package.json
+++ b/projects/ngx-circular-slider/package.json
@@ -18,6 +18,8 @@
   },
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
+    "d3-interpolate": "^1.2.0",
+    "moment": "^2.22.2"
   }
 }
