--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/d3-interpolate": "^1.2.0",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "husky": "^0.14.3",
