chore: brings versions update and brings package moment-es6 which is a wrapper for momentjs, so the import is easier and rollup has no problems at the import

--- a/projects/ngx-circular-slider/package.json
+++ b/projects/ngx-circular-slider/package.json
@@ -20,6 +20,6 @@
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
     "d3-interpolate": "^1.2.0",
-    "moment": "^2.22.2"
+    "moment-es6": "^1.0.0"
   }
 }
