--- a/package.json
+++ b/package.json
@@ -34,43 +34,43 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.1.3",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
     "@briebug/jest": "^1.3.0",
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
-    "moment": "^2.22.2",
-    "rxjs": "^6.0.0",
+    "moment-es6": "^1.0.0",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular-devkit/build-angular": "~0.7.4",
+    "@angular-devkit/build-ng-packagr": "~0.7.4",
+    "@angular/cli": "~6.1.4",
+    "@angular/compiler-cli": "^6.1.3",
+    "@angular/language-service": "^6.1.3",
     "@types/d3-interpolate": "^1.2.0",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@types/node": "~10.7.1",
+    "codelyzer": "~4.4.4",
     "husky": "^0.14.3",
-    "jest": "^23.1.0",
-    "jest-preset-angular": "^5.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
+    "jest": "^23.5.0",
+    "jest-preset-angular": "^6.0.0",
+    "ng-packagr": "^4.1.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.5",
+    "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
-    "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "tslint-config-prettier": "^1.13.0",
-    "typescript": "~2.7.2"
+    "ts-node": "~7.0.1",
+    "tsickle": "0.32.1",
+    "tslib": "^1.9.3",
+    "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "^2.9.2"
   }
 }
