--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom"],
     "paths": {
-      "ngx-circular-slider": ["dist/ngx-circular-slider"],
-      "ngx-circular-slider/*": ["dist/ngx-circular-slider/*"]
+      "ngx-circular-slider": ["./dist/ngx-circular-slider"],
+      "ngx-circular-slider/*": ["./dist/ngx-circular-slider/*"]
     }
   }
 }
