--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
     "moment-es6": "^1.0.0",
+    "ngx-take-until-destroy": "^4.1.0",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -56,6 +57,7 @@
     "@angular/cli": "~6.1.4",
     "@angular/compiler-cli": "^6.1.3",
     "@angular/language-service": "^6.1.3",
+    "@netbasal/spectator": "^2.0.2",
     "@types/d3-interpolate": "^1.2.0",
     "@types/node": "~10.7.1",
     "codelyzer": "~4.4.4",
