--- a/package.json
+++ b/package.json
@@ -45,20 +45,21 @@
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-ng-packagr": "^0.13.8",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
+    "@angular/compiler-cli": "^7.2.14",
     "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "^3.3.12",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "husky": "^0.14.3",
-    "jest": "^23.1.0",
-    "jest-preset-angular": "^5.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
+    "jest": "^24.7.1",
+    "jest-preset-angular": "^7.1.0",
+    "ng-packagr": "^5.1.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.5",
     "pretty-quick": "^1.6.0",
@@ -67,6 +68,6 @@
     "tslib": "^1.7.1",
     "tslint": "~5.9.1",
     "tslint-config-prettier": "^1.13.0",
-    "typescript": "~2.7.2"
+    "typescript": "^3.2.4"
   }
 }
