--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -5,7 +5,7 @@
     "outDir": "../out-tsc/spec",
     "baseUrl": "./",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "jasmine", "node"]
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"],
   "exclude": ["node_modules"]
