--- a/package.json
+++ b/package.json
@@ -33,40 +33,40 @@
     "precommit": "run-s lint format:fix"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^8.1.2",
+    "@angular/common": "^8.1.2",
+    "@angular/compiler": "^8.1.2",
+    "@angular/core": "^8.1.2",
+    "@angular/forms": "^8.1.2",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.1.2",
+    "@angular/platform-browser-dynamic": "^8.1.2",
+    "@angular/router": "^8.1.2",
     "core-js": "^2.5.4",
     "d3-interpolate": "^1.2.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular-devkit/build-angular": "^0.801.2",
+    "@angular-devkit/build-ng-packagr": "~0.801.2",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "^8.1.2",
+    "@angular/language-service": "^8.1.2",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "husky": "^0.14.3",
     "jest": "^23.1.0",
     "jest-preset-angular": "^5.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^5.3.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.5",
     "pretty-quick": "^1.6.0",
     "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
+    "tsickle": "0.36.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.9.1",
     "tslint-config-prettier": "^1.13.0",
-    "typescript": "~2.7.2"
+    "typescript": "~3.4.5"
   }
 }
